<resources>
    <string name="app_name">Blood Donor</string>
    <string name="get_started">Get Started</string>
    <string name="login_or_signup">Login or Signup to get started</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="state">State</string>
    <string name="diseases">Diseases</string>
    <string name="blood_group">Blood Group</string>
    <string name="dashboard">Dashboard</string>
    <string name="blood_donors">Blood Donors</string>
    <string name="donation_clinics">Donation Clinics</string>
    <string name="profile">My Profile</string>
    <string name="news">News</string>
    <string name="admin_dashboard">Admin - Dashboard</string>
    <string name="add_clinic">Add Clinic</string>
    <string name="post_news">Post News</string>
    <string name="removeUser">Remove User</string>
    <string name="removeClinic">Remove Clinic</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="no_items">No items</string>
    <string name="delete">Delete</string>
    <string name="clinics">Clinics</string>
    <string name="logout">Logout</string>
    <string name="donor_details">Donor Details</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_have_diseases">Any diseases?</string>
    <string name="are_you_a_donor">Are you a donor?</string>
    <string name="status">Status</string>
    <string name="search">Search</string>
    <string name="no_donors_available">No Donors Available!</string>
    <string name="send">Send</string>
    <string name="send_donation_request">Send Donation Request</string>
    <string name="donation_request_sent">Donation Request Sent</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="accepted">Accepted</string>
    <string name="view_profile">View Profile</string>
    <string name="donation_requests">Donation Requests</string>
    <string name="donation_requests_message">You have donation requests from the following people</string>
</resources>
